feat: Enhance capability manifest retrieval in AuthMessageHandler; improve error handling and remove unused imports